deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    environment: test
  name: testdeploy
spec: 
  #minReadySeconds: 10
  replicas: 2
  selector: 
    matchLabels: 
      environment: test
  strategy: 
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template: 
    metadata: 
      labels: 
        environment: test
    spec: 
      containers: 
      - name: djangoblog
        image: rakesha/djangoblog:6
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: myservice
  labels:
    environment: test
spec:
  selector:
    environment: test
  type:   LoadBalancer
  ports:
  - nodePort: 31000
    port:  80
    targetPort:  8000
