deploymentdev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    environment: dev
  name: devdeploy
spec: 
  #minReadySeconds: 10
  replicas: 1
  selector: 
    matchLabels: 
      environment: dev
  strategy: 
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template: 
    metadata: 
      labels: 
        environment: dev
    spec: 
      containers: 
      - name: djangoblog
        image: rakesha/djangoblog:6
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: devservice
  labels:
    environment: dev
spec:
  selector:
    environment: dev
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 8000
